# duckyduck

./: Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: args.rs  error.rs  main.rs
llms/: Cargo.toml
llms/src/: lib.rs  phi.rs  qdrant.rs  tokenizer.rs
parser/: Cargo.toml
parser/src/: github.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs  routes.rs
server/templates/: base.html  index.html  table.html
