[package]
name = "cli"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
itertools = "0.13.0"
llms = { version = "0.1.0", path = "../llms" }
parser = { version = "0.0.0", path = "../parser" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
