[package]
name = "llms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
fastembed = "3.6.0"
hf-hub = "0.3.2"
qdrant-client = "1.9.0"
serde_json = "1.0.115"
tokenizers = "0.19.1"
uuid = { version = "1.8.0", features = ["v4"] }
parser = { path = "../parser" }
itertools = "0.13.0"
