[package]
name = "llms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
fastembed = "3.6.2"
hf-hub = "0.3.2"
qdrant-client = "1.9.0"
serde_json = "1.0.115"
tokenizers = "0.19.1"
uuid = { version = "1.8.0", features = ["v4"] }
parser = { path = "../parser" }
itertools = "0.13.0"
ort = { version = "2.0.0-rc.2", features = ["fetch-models", "ndarray"] }
async-stream = "0.3.5"
futures = "0.3.30"
ndarray = "0.15.6"
rand = "0.8.5"
candle-core = "0.5.1"
candle-nn = "0.5.1"
candle-transformers = "0.5.1"
tokio-stream = "0.1.15"
axum = "0.7.5"
http-body = "1.0.0"
bytes = "1.6.0"
serde = { version = "1.0.203", features = ["derive"] }
