[package]
name = "parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.30"
http-body-util = "0.1.2"
octocrab = "0.38.0"
proc-macro2 = { version = "1.0.85", features = ["span-locations"] }
quote = "1.0.36"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.115"
syn = { version = "2.0.66", features = ["full"] }
tokio-tar = "0.3.1"
